# mkdocs_material_blog_plugin

./: .gitignore  pyproject.toml
mkdocs_blog_plugin/: main.py
tests/: test_plugin.py
tests/data/: mkdocs.yml
tests/data/docs/blog/: 2021-02-05 first page.md
