[tool.poetry]
name = "mkdocs_material_blog_plugin"
version = "0.1.0"
description = "This plugin collects all pages in a specified folder and adds them to a separate blog nav structure"
authors = ["akode <andreas.kodewitz@gmail.com>"]

[tool.poetry.plugins."mkdocs.plugins"]
blog = "mkdocs_blog_plugin.main:BlogPlugin"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = {version = "^20.8b1", allow-prereleases = true}
mkdocs-material = "^6.2.8"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88